--- a/index.html
+++ b/index.html
@@ -748,7 +748,13 @@
             </form>
             <hr>
             <form name="form_textConfig" class=""
-              oninput="editor?.document?.layer?.textConfig.assignFrom(Wc.HtmlUtil.formToObject(this));editor?.document?.layer?.flush();" onchange="this.oninput(event);"
+              oninput="
+              /*editor?.document?.layer?.textConfig.assignFrom(Wc.HtmlUtil.formToObject(this));*/
+              editor?.document?.layer.setTextConfig(Wc.HtmlUtil.formToObject(this));
+              editor?.document?.layer?.flush();
+              
+              " 
+              onchange="this.oninput(event);"
               onblur="editor.document.history.save('text config')"
               data-wc-sync-form="editor.document.layer.textConfig"
               >
@@ -783,6 +789,7 @@
                     <option value="monospace">monospace</option>
                     <option value="cursive">cursive</option>
                     <option value="fantasy">fantasy</option>
+                    <option value="Black Han Sans">(WEB FONT)Black Han Sans</option>
                   </select>
                 </div>
                 <div>
