test 파일들 정리중

--- a/test/index.html
+++ b/test/index.html
@@ -44,10 +44,20 @@
         <label class="form-label">element</label>
         <ul class="list-group">
           <li class="list-group-item">
-            <a href="./element/test.TextLayer.html">test.TextLayer.html</a>
+            <a href="./element/test.TextLayer.html">test.TextLayer.html</a>           
           </li>
-        </ul>
-  
+          <li class="list-group-item">
+            <a href="./element/ui.TextLayer.html">ui.TextLayer.html</a>
+          </li>
+        </ul>  
+      </li>
+      <li class="list-group-item">
+        <label class="form-label">tool</label>
+        <ul class="list-group">
+          <li class="list-group-item">
+            <a href="./tool/ui.brush.html">ui.brush.html</a>
+          </li>
+        </ul>  
       </li>
       <li class="list-group-item">
         <label class="form-label">draw</label>
