--- a/test/element/ui.TextLayer.html
+++ b/test/element/ui.TextLayer.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="ko" >
 <head>
-    <title>text layer</title>
+    <title>ui TextLayer</title>
     <meta charset="utf-8">
     <meta http-equiv="Content-Script-Type" content="text/javascript">
     <meta http-equiv="Content-Style-Type" content="text/css">
@@ -27,13 +27,13 @@
 
     <!-- meta og -->
 
-    <meta property="og:title" content="text layer">
+    <meta property="og:title" content="ui TextLayer">
 
-    <meta property="og:description" content="text layer">
+    <meta property="og:description" content="ui TextLayer">
     <meta name="og:image" content="http://www.mins01.com/img/logo.gif">
     <meta property="og:image:width" content="190">
     <meta property="og:image:height" content="70" />
-    <meta property="og:site_name" content="text layer" />
+    <meta property="og:site_name" content="ui TextLayer" />
     <meta property="og:type" content="website">
 
     <!-- //meta og -->
@@ -41,8 +41,8 @@
     <!-- 부트스트랩 아이콘 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
-    <link rel="stylesheet" href="third_party/ui-input-stepper/ui-input-stepper.css">
-    <script src="third_party/ui-input-stepper/UiInputStepper.js"></script>
+    <link rel="stylesheet" href="../../third_party/ui-input-stepper/ui-input-stepper.css">
+    <script src="../../third_party/ui-input-stepper/UiInputStepper.js"></script>
     <script>
         UiInputStepper.addEventListener();
         window.addEventListener('load',(event)=>{
@@ -51,12 +51,12 @@
     </script>
 
     <!-- color palette -->
-    <link rel="stylesheet" href="third_party/ui_ColorPalette/InputRangeBox/InputRangeBox.css">
-    <script src="third_party/ui_ColorPalette/InputRangeBox/InputRangeBox.js"></script>
+    <link rel="stylesheet" href="../../third_party/ui_ColorPalette/InputRangeBox/InputRangeBox.css">
+    <script src="../../third_party/ui_ColorPalette/InputRangeBox/InputRangeBox.js"></script>
 
-    <script src="third_party/ui_ColorPalette/toDraggable/toDraggable.js"></script>
-    <link rel="stylesheet" href="third_party/ui_ColorPalette/ColorPalette.css">
-    <script src="third_party/ui_ColorPalette/ColorPalette.js"></script>
+    <script src="../../third_party/ui_ColorPalette/toDraggable/toDraggable.js"></script>
+    <link rel="stylesheet" href="../../third_party/ui_ColorPalette/ColorPalette.css">
+    <script src="../../third_party/ui_ColorPalette/ColorPalette.js"></script>
     <script>
       window.addEventListener('load',(evnet)=>{
           const foreColor = localStorage.getItem('foreColor')??'#000000';
@@ -116,8 +116,8 @@
 
     <script type="module">
       
-      import HtmlUtil from "./wc/lib/HtmlUtil.js"
-      import TextLayer from "./wc/element/TextLayer.js";
+      import HtmlUtil from "../../wc/lib/HtmlUtil.js"
+      import TextLayer from "../../wc/element/TextLayer.js";
       TextLayer.defineCustomElements();
       globalThis.Wc = {HtmlUtil , TextLayer}
       
@@ -152,7 +152,7 @@
         console.log(event.type,event.target,event);
       })
     </script>
-    <link rel="stylesheet" href="./asset/style.css">
+    <link rel="stylesheet" href="../../asset/style.css">
     <style>
         canvas{ outline: 1px dotted #f0f;}
     </style>
@@ -160,7 +160,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>test text layer</h1>
+    <h1>ui TextLayer</h1>
     <div class="my-3">
 
       <button type="button" class="btn btn-lg btn-outline-light wc-bg-foreColor" data-wc-target-color="foreColor" data-bs-toggle="modal" data-bs-target="#modal-color-palette" id="btn-palette" style="text-shadow: 1px 0px 1px black;"><i class="bi bi-palette" style="color: #fff;"></i></button>
