--- a/index.html
+++ b/index.html
@@ -758,7 +758,7 @@
               onblur="editor.document.history.save('text config')"
               data-wc-sync-form="editor.document.layer.textConfig"
               >
-              <div class="grid-minmax-260px gap-3">
+              <div class="div-text-config grid-minmax-260px gap-3">
                 <div>
                   <div class="form-label mb-0"><i class="bi bi-palette"></i> Color</div>
                   <label class="input-group" role="button" for="btn-palette-textColor">
