--- a/test/element/test.TextLayer.html
+++ b/test/element/test.TextLayer.html
@@ -46,6 +46,10 @@
     TextLayer.defineCustomElements();
     globalThis.TextLayer = TextLayer;
   </script>
+  <script type="module">
+    import DrawText from '../../wc/draw/DrawText.js';
+    globalThis.DrawText = DrawText;
+  </script>
   <script>
     window.addEventListener('load',(event)=>{
       document.querySelector('#div-append').append(new TextLayer(200,100));
@@ -90,6 +94,43 @@
         <div class="form-label">append(TextLayer)</div>
         <div id="div-append">
           
+        </div>
+      </div>
+      <div class="rounded border border-1 p-3 text-bg-secondary">
+        <div>
+          <div class="form-label">textConfig.wordBreak = normal</div>
+          <div>
+            <canvas class="wc-textlayer" is="wc-textlayer" width="100" height="400"
+              data-text-config='{"fontSize":"14px","wordBreak":"normal","padding":"4px"}'
+            >abcdefghijklmnopqrstuvwxyz   ABCDEFGHIJKLMNOPQRSTUVWXYZ !@#$%&*()? 가나다라마바사아자차카타파하 あかさたなはまやらわ アカサタナハマヤラワ&#10; 天行健君子以自強不息                                        😀🐶🍕🚗🌈📚🎮🏖️🎉🧸</canvas>
+            <canvas class="wc-textlayer" is="wc-textlayer" width="200" height="400"
+              data-text-config='{"fontSize":"14px","wordBreak":"normal","padding":"4px"}'
+            >abcdefghijklmnopqrstuvwxyz   ABCDEFGHIJKLMNOPQRSTUVWXYZ !@#$%&*()? 가나다라마바사아자차카타파하 あかさたなはまやらわ アカサタナハマヤラワ&#10; 天行健君子以自強不息                                        😀🐶🍕🚗🌈📚🎮🏖️🎉🧸</canvas>
+          </div>
+        </div>
+        <hr>
+        <div>
+          <div class="form-label">textConfig.wordBreak = break-all</div>
+          <div>
+            <canvas class="wc-textlayer" is="wc-textlayer" width="100" height="400"
+              data-text-config='{"fontSize":"14px","wordBreak":"break-all","padding":"4px"}'
+            >abcdefghijklmnopqrstuvwxyz   ABCDEFGHIJKLMNOPQRSTUVWXYZ !@#$%&*()? 가나다라마바사아자차카타파하 あかさたなはまやらわ アカサタナハマヤラワ&#10; 天行健君子以自強不息                                        😀🐶🍕🚗🌈📚🎮🏖️🎉🧸</canvas>
+            <canvas class="wc-textlayer" is="wc-textlayer" width="200" height="400"
+              data-text-config='{"fontSize":"14px","wordBreak":"break-all","padding":"4px"}'
+            >abcdefghijklmnopqrstuvwxyz   ABCDEFGHIJKLMNOPQRSTUVWXYZ !@#$%&*()? 가나다라마바사아자차카타파하 あかさたなはまやらわ アカサタナハマヤラワ&#10; 天行健君子以自強不息                                        😀🐶🍕🚗🌈📚🎮🏖️🎉🧸</canvas>
+          </div>
+        </div>
+        <hr>
+        <div>
+          <div class="form-label">textConfig.wordBreak = keep-all</div>
+          <div>
+            <canvas class="wc-textlayer" is="wc-textlayer" width="100" height="400"
+              data-text-config='{"fontSize":"14px","wordBreak":"keep-all","padding":"4px"}'
+            >abcdefghijklmnopqrstuvwxyz   ABCDEFGHIJKLMNOPQRSTUVWXYZ !@#$%&*()? 가나다라마바사아자차카타파하 あかさたなはまやらわ アカサタナハマヤラワ&#10; 天行健君子以自強不息                                        😀🐶🍕🚗🌈📚🎮🏖️🎉🧸</canvas>
+            <canvas class="wc-textlayer" is="wc-textlayer" width="200" height="400"
+              data-text-config='{"fontSize":"14px","wordBreak":"keep-all","padding":"4px"}'
+            >abcdefghijklmnopqrstuvwxyz   ABCDEFGHIJKLMNOPQRSTUVWXYZ !@#$%&*()? 가나다라마바사아자차카타파하 あかさたなはまやらわ アカサタナハマヤラワ&#10; 天行健君子以自強不息                                        😀🐶🍕🚗🌈📚🎮🏖️🎉🧸</canvas>
+          </div>
         </div>
       </div>
     </div>
