--- a/test/element/test.TextLayer.html
+++ b/test/element/test.TextLayer.html
@@ -97,40 +97,41 @@
         </div>
       </div>
       <div class="rounded border border-1 p-3 text-bg-secondary">
-        <div>
-          <div class="form-label">textConfig.wordBreak = normal</div>
+        <div class="d-flex flex-wrap justify-content-around gap-3">
           <div>
-            <canvas class="wc-textlayer" is="wc-textlayer" width="100" height="400"
-              data-text-config='{"fontSize":"14px","wordBreak":"normal","padding":"4px"}'
-            >abcdefghijklmnopqrstuvwxyz   ABCDEFGHIJKLMNOPQRSTUVWXYZ !@#$%&*()? 가나다라마바사아자차카타파하 あかさたなはまやらわ アカサタナハマヤラワ&#10; 天行健君子以自強不息                                        😀🐶🍕🚗🌈📚🎮🏖️🎉🧸</canvas>
-            <canvas class="wc-textlayer" is="wc-textlayer" width="200" height="400"
-              data-text-config='{"fontSize":"14px","wordBreak":"normal","padding":"4px"}'
-            >abcdefghijklmnopqrstuvwxyz   ABCDEFGHIJKLMNOPQRSTUVWXYZ !@#$%&*()? 가나다라마바사아자차카타파하 あかさたなはまやらわ アカサタナハマヤラワ&#10; 天行健君子以自強不息                                        😀🐶🍕🚗🌈📚🎮🏖️🎉🧸</canvas>
+            <div class="form-label">textConfig.wordBreak = normal</div>
+            <div>
+              <canvas class="wc-textlayer" is="wc-textlayer" width="100" height="400"
+                data-text-config='{"fontSize":"14px","wordBreak":"normal","padding":"4px"}'
+              >abcdefghijklmnopqrstuvwxyz   ABCDEFGHIJKLMNOPQRSTUVWXYZ !@#$%&*()? 가나다라마바사아자차카타파하 あかさたなはまやらわ アカサタナハマヤラワ&#10; 天行健君子以自強不息                                        😀🐶🍕🚗🌈📚🎮🏖️🎉🧸</canvas>
+              <canvas class="wc-textlayer" is="wc-textlayer" width="200" height="400"
+                data-text-config='{"fontSize":"14px","wordBreak":"normal","padding":"4px"}'
+              >abcdefghijklmnopqrstuvwxyz   ABCDEFGHIJKLMNOPQRSTUVWXYZ !@#$%&*()? 가나다라마바사아자차카타파하 あかさたなはまやらわ アカサタナハマヤラワ&#10; 天行健君子以自強不息                                        😀🐶🍕🚗🌈📚🎮🏖️🎉🧸</canvas>
+            </div>
           </div>
-        </div>
-        <hr>
-        <div>
-          <div class="form-label">textConfig.wordBreak = break-all</div>
           <div>
-            <canvas class="wc-textlayer" is="wc-textlayer" width="100" height="400"
-              data-text-config='{"fontSize":"14px","wordBreak":"break-all","padding":"4px"}'
-            >abcdefghijklmnopqrstuvwxyz   ABCDEFGHIJKLMNOPQRSTUVWXYZ !@#$%&*()? 가나다라마바사아자차카타파하 あかさたなはまやらわ アカサタナハマヤラワ&#10; 天行健君子以自強不息                                        😀🐶🍕🚗🌈📚🎮🏖️🎉🧸</canvas>
-            <canvas class="wc-textlayer" is="wc-textlayer" width="200" height="400"
-              data-text-config='{"fontSize":"14px","wordBreak":"break-all","padding":"4px"}'
-            >abcdefghijklmnopqrstuvwxyz   ABCDEFGHIJKLMNOPQRSTUVWXYZ !@#$%&*()? 가나다라마바사아자차카타파하 あかさたなはまやらわ アカサタナハマヤラワ&#10; 天行健君子以自強不息                                        😀🐶🍕🚗🌈📚🎮🏖️🎉🧸</canvas>
+            <div class="form-label">textConfig.wordBreak = break-all</div>
+            <div>
+              <canvas class="wc-textlayer" is="wc-textlayer" width="100" height="400"
+                data-text-config='{"fontSize":"14px","wordBreak":"break-all","padding":"4px"}'
+              >abcdefghijklmnopqrstuvwxyz   ABCDEFGHIJKLMNOPQRSTUVWXYZ !@#$%&*()? 가나다라마바사아자차카타파하 あかさたなはまやらわ アカサタナハマヤラワ&#10; 天行健君子以自強不息                                        😀🐶🍕🚗🌈📚🎮🏖️🎉🧸</canvas>
+              <canvas class="wc-textlayer" is="wc-textlayer" width="200" height="400"
+                data-text-config='{"fontSize":"14px","wordBreak":"break-all","padding":"4px"}'
+              >abcdefghijklmnopqrstuvwxyz   ABCDEFGHIJKLMNOPQRSTUVWXYZ !@#$%&*()? 가나다라마바사아자차카타파하 あかさたなはまやらわ アカサタナハマヤラワ&#10; 天行健君子以自強不息                                        😀🐶🍕🚗🌈📚🎮🏖️🎉🧸</canvas>
+            </div>
           </div>
-        </div>
-        <hr>
-        <div>
-          <div class="form-label">textConfig.wordBreak = keep-all</div>
           <div>
-            <canvas class="wc-textlayer" is="wc-textlayer" width="100" height="400"
-              data-text-config='{"fontSize":"14px","wordBreak":"keep-all","padding":"4px"}'
-            >abcdefghijklmnopqrstuvwxyz   ABCDEFGHIJKLMNOPQRSTUVWXYZ !@#$%&*()? 가나다라마바사아자차카타파하 あかさたなはまやらわ アカサタナハマヤラワ&#10; 天行健君子以自強不息                                        😀🐶🍕🚗🌈📚🎮🏖️🎉🧸</canvas>
-            <canvas class="wc-textlayer" is="wc-textlayer" width="200" height="400"
-              data-text-config='{"fontSize":"14px","wordBreak":"keep-all","padding":"4px"}'
-            >abcdefghijklmnopqrstuvwxyz   ABCDEFGHIJKLMNOPQRSTUVWXYZ !@#$%&*()? 가나다라마바사아자차카타파하 あかさたなはまやらわ アカサタナハマヤラワ&#10; 天行健君子以自強不息                                        😀🐶🍕🚗🌈📚🎮🏖️🎉🧸</canvas>
+            <div class="form-label">textConfig.wordBreak = keep-all</div>
+            <div>
+              <canvas class="wc-textlayer" is="wc-textlayer" width="100" height="400"
+                data-text-config='{"fontSize":"14px","wordBreak":"keep-all","padding":"4px"}'
+              >abcdefghijklmnopqrstuvwxyz   ABCDEFGHIJKLMNOPQRSTUVWXYZ !@#$%&*()? 가나다라마바사아자차카타파하 あかさたなはまやらわ アカサタナハマヤラワ&#10; 天行健君子以自強不息                                        😀🐶🍕🚗🌈📚🎮🏖️🎉🧸</canvas>
+              <canvas class="wc-textlayer" is="wc-textlayer" width="200" height="400"
+                data-text-config='{"fontSize":"14px","wordBreak":"keep-all","padding":"4px"}'
+              >abcdefghijklmnopqrstuvwxyz   ABCDEFGHIJKLMNOPQRSTUVWXYZ !@#$%&*()? 가나다라마바사아자차카타파하 あかさたなはまやらわ アカサタナハマヤラワ&#10; 天行健君子以自強不息                                        😀🐶🍕🚗🌈📚🎮🏖️🎉🧸</canvas>
+            </div>
           </div>
+
         </div>
       </div>
     </div>
