--- a/test/element/ui.TextLayer.html
+++ b/test/element/ui.TextLayer.html
@@ -353,6 +353,15 @@
                     <option value="break-word">break-word (될 수 있는 한 단어 단위 줄바꿈)</option>
                   </select>
                 </div>
+                <div>
+                  <div class="form-label mb-0"><i class="bi bi-arrow-return-left"></i> overflowWrap(문장이 넘칠 경우 설정)</div>
+                  <select name="wordBreak" class="form-select">
+                    <option value="normal">normal (밖으로까지 그린다.)</option>
+                    <option value="break-word">break-word (글자를 줄 바꿈한다.)</option>
+                  </select>
+                </div>
+
+                
                 <!-- fontStretch 지원 안되나? 나중에 다시 테스트해보자  -->
                 <!-- fontVariantCaps 지원 안할꺼라 -->
                 
