TextLayer 개선 적용 #16

--- a/index.html
+++ b/index.html
@@ -896,6 +896,23 @@
                     <option value="none">none</option>
                   </select>
                 </div>
+                <div>
+                  <div class="form-label mb-0"><i class="bi bi-arrow-return-left"></i> wordBreak(줄바꿈 설정)</div>
+                  <select name="wordBreak" class="form-select">
+                    <option value="normal">normal (기본값)(이거 써야하나.. keep-all 이 좋을 듯)</option>
+                    <option value="break-all">break-all (글자 단위 줄바꿈)</option>
+                    <option value="keep-all">keep-all (단어 단위 줄바꿈)</option>
+                  </select>
+                </div>
+                <div>
+                  <div class="form-label mb-0"><i class="bi bi-arrow-return-left"></i> overflowWrap(문장이 넘칠 경우 설정)</div>
+                  <select name="overflowWrap" class="form-select">
+                    <option value="normal">normal (밖으로까지 그린다.)</option>
+                    <option value="break-word">break-word (한 줄에서 넘어가면 줄 바꿈한다.)</option>
+                  </select>
+                </div>
+
+                
                 <!-- fontStretch 지원 안되나? 나중에 다시 테스트해보자  -->
                 <!-- fontVariantCaps 지원 안할꺼라 -->
                 
