--- a/test/element/ui.TextLayer.html
+++ b/test/element/ui.TextLayer.html
@@ -183,29 +183,34 @@
         </div>
       </div>
     </div>
-    <!-- <div class="my-3">
-      <div class="card">
-        <div class="card-body">
-          <form name="form_text" action="" oninput="textlayer.setText(this.text.value);textlayer.draw();">
-            <div>
-              <div class="form-label mb-0">Text</div>
-              <textarea name="text" rows="5" class="form-control"></textarea>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>     -->
     <div class="my-3">
       <div class="card">
         <div class="card-body">
-          <form name="form_text" action="" oninput="textlayer.setText(this.text.value);textlayer.draw();">
+          <form name="form_text" action="" 
+            oninput="
+              textlayer.setText(this.text.value);
+              textlayer.draw();
+              Wc.HtmlUtil.applyStyleObject(document.querySelector('#form-text-text'),textlayer.textConfig.exportToStyleObject())
+              " 
+            onsubmit="
+              this.oninput();
+              console.log('text submit'); return false;">
             <div>
               <div class="form-label mb-0"><i class="bi bi-card-text"></i> Text</div>
-              <textarea name="text" rows="5" class="form-control"></textarea>
+              <textarea id="form-text-text" name="text" rows="5" class="form-control" style="height: 200px;"></textarea>
+              <div class="text-end my-1">
+                <button class="btn btn-primary" type="submit">확인</button>
+              </div>
             </div>
           </form>
           <hr>
-          <form name="form_textConfig" oninput="textlayer.setTextConfig(Wc.HtmlUtil.formToObject(this));textlayer.flush();" onchange="this.oninput(event);">
+          <form name="form_textConfig" 
+            oninput="
+              textlayer.setTextConfig(Wc.HtmlUtil.formToObject(this));
+              textlayer.flush();
+              Wc.HtmlUtil.applyStyleObject(document.querySelector('#form-text-text'),textlayer.textConfig.exportToStyleObject())
+            " 
+            onchange="this.oninput(event);">
             <div class="div-text-config grid-minmax-260px gap-3">
               <div>
                 <div class="form-label mb-0"><i class="bi bi-palette"></i> Color</div>
