--- a/test/element/ui.TextLayer.html
+++ b/test/element/ui.TextLayer.html
@@ -194,7 +194,8 @@
               " 
             onsubmit="
               this.oninput();
-              console.log('text submit'); return false;">
+              console.log('text submit'); return false;"
+          >
             <div>
               <div class="form-label mb-0"><i class="bi bi-card-text"></i> Text</div>
               <textarea id="form-text-text" name="text" rows="5" class="form-control" style="height: 200px;"></textarea>
