url 오픈 버그 수정

--- a/test/index.html
+++ b/test/index.html
@@ -68,6 +68,15 @@
         </ul>
   
       </li>
+      <li class="list-group-item">
+        <label class="form-label">open url from querystring</label>
+        <ul class="list-group">
+          <li class="list-group-item">
+            <a href="../index.html?url=asset%2Flogo-256x256.png">open url : asset/logo-256x256.png</a>
+          </li>
+        </ul>
+  
+      </li>
     </ul>
   </div>
   
