--- a/test/element/ui.TextLayer.html
+++ b/test/element/ui.TextLayer.html
@@ -212,7 +212,7 @@
               Wc.HtmlUtil.applyStyleObject(document.querySelector('#form-text-text'),textlayer.textConfig.exportToStyleObject())
             " 
             onchange="this.oninput(event);">
-            <div class="div-text-config grid-minmax-260px gap-3">
+            <div class="div-text-config grid-auto-fill grid-auto-fill-260px gap-3">
               <div>
                 <div class="form-label mb-0"><i class="bi bi-palette"></i> Color</div>
                 <label class="input-group" role="button" for="btn-palette-textColor">
