new 에 템블릿 정리. .grid-auto-fill 스타일 정리

--- a/index.html
+++ b/index.html
@@ -712,30 +712,30 @@
                 <hr class="my-1">
                 <div>
                   <div class="form-label m-0"><i class="bi bi-square"></i> Square</div>
-                  <div class="grid-auto-fill grid-auto-fill-80px gap-1 p-1">
-                    <button type="button" class="btn btn-primary" onclick="this.form.width.value=100;this.form.height.value=100;">100x100</button>
-                    <button type="button" class="btn btn-primary" onclick="this.form.width.value=200;this.form.height.value=200;">200x200</button>
-                    <button type="button" class="btn btn-primary" onclick="this.form.width.value=300;this.form.height.value=300;">300x300</button>
-                    <button type="button" class="btn btn-primary" onclick="this.form.width.value=600;this.form.height.value=600;">600x600</button>
-                    <button type="button" class="btn btn-primary" onclick="this.form.width.value=800;this.form.height.value=800;">800x800</button>
+                  <div class="grid-auto-fill grid-auto-fill-80px gap-1">
+                    <button type="button" class="btn btn-sm btn-success" onclick="this.form.width.value=100;this.form.height.value=100;">100x100</button>
+                    <button type="button" class="btn btn-sm btn-success" onclick="this.form.width.value=200;this.form.height.value=200;">200x200</button>
+                    <button type="button" class="btn btn-sm btn-success" onclick="this.form.width.value=300;this.form.height.value=300;">300x300</button>
+                    <button type="button" class="btn btn-sm btn-success" onclick="this.form.width.value=600;this.form.height.value=600;">600x600</button>
+                    <button type="button" class="btn btn-sm btn-success" onclick="this.form.width.value=800;this.form.height.value=800;">800x800</button>
                   </div>
                 </div>
                 <div>
                   <div class="form-label m-0"><i class="bi bi-file-image"></i> Portrait</div>
-                  <div class="grid-auto-fill grid-auto-fill-80px gap-1 p-1">
-                    <button type="button" class="btn btn-primary" onclick="this.form.width.value=300;this.form.height.value=400;">300x400</button>
-                    <button type="button" class="btn btn-primary" onclick="this.form.width.value=480;this.form.height.value=640;">480x640</button>
-                    <button type="button" class="btn btn-primary" onclick="this.form.width.value=600;this.form.height.value=800;">600x800</button>
-                    <button type="button" class="btn btn-primary" onclick="this.form.width.value=768;this.form.height.value=1024;">768x1024</button>
+                  <div class="grid-auto-fill grid-auto-fill-80px gap-1">
+                    <button type="button" class="btn btn-sm btn-success" onclick="this.form.width.value=300;this.form.height.value=400;">300x400</button>
+                    <button type="button" class="btn btn-sm btn-success" onclick="this.form.width.value=480;this.form.height.value=640;">480x640</button>
+                    <button type="button" class="btn btn-sm btn-success" onclick="this.form.width.value=600;this.form.height.value=800;">600x800</button>
+                    <button type="button" class="btn btn-sm btn-success" onclick="this.form.width.value=768;this.form.height.value=1024;">768x1024</button>
                   </div>
                 </div>
                 <div>
                   <div class="form-label m-0"><i class="bi bi-card-image"></i> Landscape</div>
-                  <div class="grid-auto-fill grid-auto-fill-80px gap-1 p-1">
-                    <button type="button" class="btn btn-primary" onclick="this.form.width.value=400;this.form.height.value=300;">400x300</button>
-                    <button type="button" class="btn btn-primary" onclick="this.form.width.value=640;this.form.height.value=480;">640x480</button>
-                    <button type="button" class="btn btn-primary" onclick="this.form.width.value=800;this.form.height.value=600;">800x600</button>
-                    <button type="button" class="btn btn-primary" onclick="this.form.width.value=1024;this.form.height.value=768;">1024x768</button>
+                  <div class="grid-auto-fill grid-auto-fill-80px gap-1">
+                    <button type="button" class="btn btn-sm btn-success" onclick="this.form.width.value=400;this.form.height.value=300;">400x300</button>
+                    <button type="button" class="btn btn-sm btn-success" onclick="this.form.width.value=640;this.form.height.value=480;">640x480</button>
+                    <button type="button" class="btn btn-sm btn-success" onclick="this.form.width.value=800;this.form.height.value=600;">800x600</button>
+                    <button type="button" class="btn btn-sm btn-success" onclick="this.form.width.value=1024;this.form.height.value=768;">1024x768</button>
                   </div>
                 </div>
                 
