ui-transform-tool 에 integeronly 적용

--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
         <!-- <div class="wc-frame">
           <canvas id="wc-document" class="wc-document" width="300" height="300" is="wc-document"></canvas>
         </div> -->
-        <ui-transform-tool id="utt01" class="custom-01 only-shown only-shown-tool-Transform only-shown-tool-Text only-display-tool-enable" resizable moveable  width="100" height="100" left="10" top="10" >
+        <ui-transform-tool id="utt01" class="custom-01 only-shown only-shown-tool-Transform only-shown-tool-Text only-display-tool-enable" resizable moveable integeronly  width="100" height="100" left="10" top="10" >
           <div class="only-shown only-shown-tool-Transform">
             <div class="text-center">
               TRANSFORM<br>
