--- a/test/element/ui.TextLayer.html
+++ b/test/element/ui.TextLayer.html
@@ -351,6 +351,14 @@
                 </select>
               </div>
               <div>
+                <div class="form-label mb-0"><i class="bi bi-arrow-return-left"></i> whiteSpace(자동줄바꿈)</div>
+                <select name="whiteSpace" class="form-select">
+                  <!-- <option value="normal">normal (기본값)(이거 써야하나.. keep-all 이 좋을 듯)</option> -->
+                  <option value="break-spaces">break-spaces (최대한 자동 줄바꿈)</option>
+                  <option value="pre">pre (자동 줄바꿈 없음)</option>
+                </select>
+              </div>
+              <div>
                 <div class="form-label mb-0"><i class="bi bi-arrow-return-left"></i> wordBreak(줄바꿈 설정)</div>
                 <select name="wordBreak" class="form-select">
                   <option value="normal">normal (기본값)(이거 써야하나.. keep-all 이 좋을 듯)</option>
